Stage 1 con textos corregidos, workshop tips y explication & examples

--- a/app/views/steps/stage1.html.erb
+++ b/app/views/steps/stage1.html.erb
@@ -1,16 +1,16 @@
 <div class="container main">
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 stage_menu">
-          <h3>STAGE 1</h3>
+          <h3>What problems you want to address? What policy change you aim to achieve?</h3>
           <ul class="nav nav-stacked">
-            <li class="active"><a href="#"><i class="fa fa-check-circle"></i> What do you think the real-world problem?</a></li>
-            <li><a href="#"><i class="fa fa-check-circle"></i> What do you think are the policy dimensions of the 'real-world' problem?</a></li>
-            <li><a href="#"><i class="fa fa-check-circle"></i> What policy solutions do you propose?</a></li>
+            <li class="active"><a href="#"><i class="fa fa-check-circle"></i> Which real-world problem children are facing that you want to address?</a></li>
+            <li><a href="#"><i class="fa fa-check-circle"></i> Which real-world problem children are facing that you want to address?</a></li>
+            <li><a href="#"><i class="fa fa-check-circle"></i> Which policy solutions would constitute an appropriate response?</a></li>
           </ul>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
-          <h2>Articulate problems and policy solutions</h2>
-          <p>The interim outcomes are key changes that need to happen in order to achieve the advocacy objetive</p>
+          <h2>What problems you want to address? What policy change you aim to achieve?</h2>
+          <p>The foundation of an effective advocacy strategy is a common understanding of the main problems that affect children, their policy dimensions and related policy solutions. It is important you take time to go through this discussion because without a clear, articulated issue and well-defined problems and solutions the remaining parts of the strategy will lose focus.</p>
 
           <div role="tabpanel" class="tabpanel">
             <!-- Nav tabs -->
@@ -25,7 +25,7 @@
               <div role="tabpanel" class="tab-pane active" id="data">
               <div class="bg_grey">
                 <button type="button" class="btn btn-warning pull-right">Edit</button>
-                <h4>What do you think the real-world problem? <i class="fa fa-info-circle" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed arcu ex. Vestibulum eget felis eros. Proin vehicula fermentum augue, eu tristique velit accumsan a. Praesent vel metus ante."></i></h4>
+                <h4>Which real-world problem children are facing that you want to address? <i class="fa fa-info-circle" title="A real-world problem is the negative situation children face that UNICEF would like to change (malnutrition, child poverty, infant mortality, disparities in education, etc). At the early stages of the planning process you should identify and articulate the real-world problem you want to address. The problem should be described as precisely and concretely as possible. For instance, whenever is possible, it should include the geographical scope, a time period, and population affected (see example below)"></i></h4>
 
                 <p class="bold">Problem</p>
                 <p>20 per cent of children in country XX live below the poverty line</p>
@@ -36,7 +36,7 @@
               </div>
               <div class="bg_grey">
                 <button type="button" class="btn btn-warning pull-right">Add</button>
-                <h4>What do you think are the policy dimensions of the 'real-world' problem? <i class="fa fa-info-circle" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed arcu ex. Vestibulum eget felis eros. Proin vehicula fermentum augue, eu tristique velit accumsan a. Praesent vel metus ante."></i></h4>
+                <h4>Which are the policy-related causes of the real-world problem? <i class="fa fa-info-circle" title="Behind the real-world problems there are usually multiple causes, including causes related to programmes, to bad practices or to the policymaking environment. Advocacy work focuses specifically on the latest and often refers to causes such as deficient governance mechanisms, inadequate legal framework or imbalanced power relationships. Therefore, your problem analysis should prioritize the identification of these causes rather than all the factors behind the real-world problem"></i></h4>
               </div>
 
               <div class="panel panel-default objetives">
@@ -46,7 +46,7 @@
                 </div>      
                 <div class="collapse in" id="objetive1">
                   <button type="button" class="btn btn-info pull-right">Add</button>
-                  <h4>What policy solutions do you propose? <i class="fa fa-info-circle" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed arcu ex. Vestibulum eget felis eros. Proin vehicula fermentum augue, eu tristique velit accumsan a. Praesent vel metus ante."></i></h4>
+                  <h4>Which policy solutions would constitute an appropriate response? <i class="fa fa-info-circle" title="What are the main policy solutions that would resolve the problems identified and that UNICEF would like to see adopted? "></i></h4>
                   <table class="table">
                       <tbody>
                         <tr>
@@ -73,14 +73,71 @@
                 </div>      
                 <div class="collapse in" id="objetive2">
                   <button type="button" class="btn btn-info pull-right">Add</button>
-                  <h4>What policy solutions do you propose? <i class="fa fa-info-circle" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed arcu ex. Vestibulum eget felis eros. Proin vehicula fermentum augue, eu tristique velit accumsan a. Praesent vel metus ante."></i></h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed arcu ex. Vestibulum eget felis eros. Proin vehicula fermentum augue, eu tristique velit accumsan a. Praesent vel metus ante. Integer tempus, nunc in congue mattis, velit nisl ultrices arcu, eget molestie dui diam suscipit eros</p>
+                  <h4>Which policy solutions would constitute an appropriate response?</h4>
+                  <p>What are the main policy solutions that would resolve the problems identified and that UNICEF would like to see adopted?</p>
                 </div>
               </div>
 
               </div>
-              <div role="tabpanel" class="tab-pane" id="explication">...</div>
-              <div role="tabpanel" class="tab-pane" id="tips">...</div>
+              <div role="tabpanel" class="tab-pane" id="explication">
+                <h3>Explication</h3>
+                <hr>
+                <h4>Which real-world problem children are facing that you want to address?</h4>
+                <p>A real-world problem is the negative situation children face that UNICEF would like to change (malnutrition, child poverty, infant mortality, disparities in education, etc). At the early stages of the planning process you should identify and articulate the real-world problem you want to address. The problem should be described as precisely and concretely as possible. For instance, whenever is possible, it should include the geographical scope, a time period, and population affected (see example below)</p>
+                <h4>Which are the policy-related causes of the real-world problem?</h4>
+                <p>Behind the real-world problems there are usually multiple causes, including causes related to programmes, to bad practices or to the policymaking environment. Advocacy work focuses specifically on the latest and often refers to causes such as deficient governance mechanisms, inadequate legal framework or imbalanced power relationships. Therefore, your problem analysis should prioritize the identification of these causes rather than all the factors behind the real-world problem.</p>
+                <p>To conduct the problem analysis, you can use a problem tree. The problem tree is a well-known tool that “will help advocates understand the immediate, underlying and root causes of the issue, as well as help in gathering information to support the analysis”.</p>
+                <h4>Which policy solutions would constitute an appropriate response?</h4>
+                <p>What are the main policy solutions that would resolve the problems identified and that UNICEF would like to see adopted?</p>
+                <p>The policy solutions usually refer to:</p>
+                <ul>
+                  <li>Policy development (ex. Development of a nutrition national plan)</li>
+                  <li>Placement on the policy agenda. (Ex: Official paper on new financing mechanisms)</li>
+                  <li>Policy adoption. (Ex: approval of equal pay act)</li>
+                  <li>Policy blocking: (Ex. Rejection of anti-homosexuality bill)</li>
+                  <li>Policy implementation: (Ex. Implementation of regulations forbidding summary deportations by the police)</li>
+                  <li>Policy maintenance. (Ex.: No reduction of budgets for child protection policies)</li>
+                </ul>
+                <p>In those contexts where a policy change may be too ambitious, an organization may aim for a discursive change (which should pave the way for a policy change in the longer run). For instance, for many years, given the lack of options to achieve change on policies related to tax heavens, organizations working on tax justice focused their advocacy efforts on a change in the discourse in the society so tax havens were seen by the majority as an unacceptable practice that distract critical resources for the countries to pay for social services. These efforts built the ground for changes in policy later on when opportunities appeared (i.e. with the 2008 financial crisis).</p>
+                
+                <h3>Example</h3>
+                <hr>
+                <h4>Real-world problem</h4>
+                <p>Increasing mother to child transmission of HIV in country AEIOU during the last 3 years</p>
+                <h4>Policy dimensions of the problem</h4>
+                <ul>
+                  <li>Women and children not included as target populations of the National Strategic Plan (epidemy historically concentrated in male drug users)</li>
+                  <li>Health insurance law does not cover informal workers and many women at risk belong to this group. (Therefore, due to limited capacity to cover out-of-pocket expenditures women with little resources do not attend clinics for HIV testing and treatment)</li>
+                  <li>PMTCT not included as a priority in the National Strategic Plan (few resources to improve services, campaigns, etc.)- Few donors paying attention to it.</li>
+                  <li>Current legal framework stipulates detention for sex workers (after 3 monetary sanctions), which prevents sex workers to attend health services due to fear of being denounced. </li>
+                </ul>
+                <h4>Policy Solutions</h4>
+                <ul>
+                  <li>Amendment to the Penal Code to remove sanctions in the form of detention for sex workers</li>
+                  <li>Revision of the National HIV Strategy </li>
+                  <li>Health insurance policy framework revised to cover disadvantaged informal workers</li>
+                  <li>Increase donor funding on PMTCT</li>
+                </ul>
+
+              </div>
+              <div role="tabpanel" class="tab-pane" id="tips">
+
+                <ul>
+                  <li>
+                    Often when the advocacy planning process kicks off the organization has already defined the real-world problem it wants to focus on and has also carried out a general situation analysis of the real world problem (or even conducted a problem tree). Therefore, the advocacy planning process does not need to start from scratch but should use the information available as a basis for the advocacy planning process. <br>
+                    Therefore, prior to the planning session you should have identified the problem and use it as a key input. You can write it in a big card and place it on a wall. If possible, leave enough space to add several layers of cards below.  Furthermore, you could ask one participant to deliver a short presentation of the main identified causes in the area of analysis as a “refresher” for the rest of the team and then ask participants to identify those causes with a clear policy dimension.
+                  </li>
+                  <li>
+                    “Policy glasses”. Invite participants to wear their “policy glasses” so they focus on the policy related causes and explain clearly the relation/connection to the policy-making environment. <br>
+                    For example, in a low-income country it is identified that a main cause of the rapid spread of a communicable disease is the lack of hand hygiene and a programme response from UNICEF is likely to be the implementation of a behavioural change campaign. If there is not a specific connection to the policymaking environment, it should not be identified as one of the policy-related causes in the analysis.
+                  </li>
+                  <li>
+                    If there are many policy related causes it is usually useful to group them under broader themes such as lack of enforcement of approved procedures, lack of knowledge about rights or lack of data.
+                  </li>
+                  <li>Organizations who have been working on an issue have usually identified (through research, partnerships, etc.) solutions for the policy related problems. Hence the solutions can be easily listed. However, newcomers to the issues may not have been able to develop and/or agree on concrete policy solutions. In this case you should try to be as specific as possible. You can also consult with experts ahead of the planning session or invite them to participate in the process so they can provide you with valuable inputs on adequate solutions. </li>
+                </ul>
+                
+              </div>
             </div>
 
           </div>
