--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -11,7 +11,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 h2, .h2 {
   font-size: 24px;
 }
-li {
+.tab-pane li {
   margin-bottom: 15px;
 }
 .btn {
