Resource list reloaded after new resource post

--- a/app/views/projects/_resources.html.erb
+++ b/app/views/projects/_resources.html.erb
@@ -1,6 +1,7 @@
 <div ng-controller="projectResourcesCtrl">
+  {{current_resource}}
     <div>
-        <a class="btn btn-default" ng-click="add_resource()">
+        <a class="btn btn-default" ng-click="open_form()">
         <i class="fa fa-plus-square-o"></i> New Resource
       </a>
     </div>
