--- a/app/views/projects/_resources.html.erb
+++ b/app/views/projects/_resources.html.erb
@@ -6,11 +6,16 @@
       </a>
     </div>
     <div class="clearfix"></div>
-          <table id="resources" class="table table-striped table-bordered">
+          <table class="table table-striped table-bordered" st-safe-src="resources" st-table="resource_list">
             <thead>
               <tr>
+                <th colspan="7">
+                  <input st-search placeholder="global search" class="input-sm form-control" type="search"/>
+                </th>
+              </tr>
+              <tr>
                 <th>Id</th>
-                <th>Name</th>
+                <th st-sort="title" >Name</th>
                 <th>Description</th>
                 <th>Tags</th>
                 <th class="text-center no-sort">Public</th>
@@ -19,7 +24,7 @@
               </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="resource in resources">
+                <tr ng-repeat="resource in resource_list">
                     <td>{{resource.id}}</td>
                     <td>{{resource.title}}</td>
                     <td>{{resource.description}}</td>
@@ -27,91 +32,17 @@
                     <td>{{resource.public}}</td>
                     <td>{{resource.updated_at}}</td>
                     <td>
-                        <%= button_tag "Edit", {class: "btn", :"ng-click" => "e_policy_dimension(pp)", type: "button"}%>
+                        <%= button_tag "Edit", {class: "btn", :"ng-click" => "open_form(resource)", type: "button"}%>
                     </td>
                 </tr>
-                <tr>
-                  <td>1</td>
-                  <td><a href="#">Trello Name</a></td>
-                  <td>Great Resource</td>
-                   <td class="tags">
-                    <span class="label label-default">Tag1</span>
-                    <span class="label label-default">Tag1</span>
-                    <span class="label label-default">Tag1</span>
-                  </td>
-                  <td class="text-center">
-                    <i class="fa fa-globe" title="Public"></i>
-                  </td>
-                  <td>2015-03-05 13:02:30 UTC</td>
-                    <td class="text-right actions">
-                       <a href="#"><i class="fa fa-edit" title="Edit"></i></a>
-                        <a href="#"><i class="fa fa-trash" title="Delete"></i></a>
-                    </td>
-                  </tr>
-                  <tr>
-                  <td>2</td>
-                  <td><a href="#">Document Name</a></td>
-                  <td>Great Resource</td>
-                   <td class="tags">
-                    <span class="label label-default">Tag1</span>
-                    <span class="label label-default">Tag1</span>
-                    <span class="label label-default">Tag1</span>
-                  </td>
-                  <td class="text-center">
-                    <i class="fa fa-globe" title="Public"></i>
-                  </td>
-                  <td>2015-03-05 13:02:30 UTC</td>
-                    <td class="text-right actions">
-                       <a href="#"><i class="fa fa-edit" title="Edit"></i></a>
-                        <a href="#"><i class="fa fa-trash" title="Delete"></i></a>
-                    </td>
-                  </tr>
-                  <tr>
-                      <td>3</td>
-                      <td><a href="#">Sandbox 3</a></td>
-                      <td>Great Resource</td>
-                       <td class="tags">
-                        <span class="label label-default">Tag1</span>
-                        <span class="label label-default">Tag1</span>
-                        <span class="label label-default">Tag1</span>
-                      </td>
-                      <td class="text-center">
-                        <i class="fa fa-globe" title="Public"></i>
-                      </td>
-                      <td>2015-03-05 13:02:30 UTC</td>
-                      <td class="text-right actions">
-                            <a href="#">
-                                <i class="fa fa-edit" title="Edit"></i>
-                            </a>                  
-                            <a href="#">
-                                <i class="fa fa-cog" title="Edit Configuration"></i>
-                            </a>                  
-                            <a href="#">
-                                <i class="fa fa-copy" title="Clone"></i>
-                            </a>
-                            <a href="#">
-                                <i class="fa fa-download" title="Export to JSON"></i>
-                            </a>                  
-                            <a data-confirm="Are you sure you want to permanently delete this sandbox?" data-method="delete" href="#" rel="nofollow">
-                                <i class="fa fa-trash" title="Delete"></i>
-                            </a>                
-                        </td>
-                  </tr>
             </tbody>
+            <tfoot>
+              <tr>
+                <td colspan="7" class="text-center">
+                  <div st-pagination="" st-items-by-page="itemsByPage" st-displayed-pages="7"></div>
+                </td>
+              </tr>
+            </tfoot>
           </table>
           <div class="clearfix"></div>
-    <script type="text/javascript">
-    $(document).ready(function(){
-        $('#resources').dataTable( {
-        "dom": '<"toolbar">frtip',
-        "pagingType": "simple_numbers",
-        "order": [],
-        "columnDefs": [ {
-          "targets"  : 'no-sort',
-          "orderable": false,
-        }]
-        } );
-    });
-
-    </script>
 </div>
