--- a/app/views/resources/aside.html.erb
+++ b/app/views/resources/aside.html.erb
@@ -4,11 +4,11 @@
 <div class="modal-body">
     <%= simple_form_for [@project, @resource], remote: true do |f| %>
         <%= f.error_notification %>
-        <%= f.input :title %>
-        <%= f.input :description %>
-        <%= f.input :link %>
-        <%= f.input :tag_list %>
-        <%= f.input :public %>
+        <%= f.input :title, input_html: {:"ng-model" => "current_resource.title"} %>
+        <%= f.input :description, input_html: {:"ng-model" => "current_resource.description"} %>
+        <%= f.input :link , input_html: {:"ng-model" => "current_resource.link"} %>
+        <%= f.input :tag_list , input_html: {:"ng-model" => "current_resource.tag_list"} %>
+        <%= f.input :public , input_html: {:"ng-model" => "current_resource.public"} %>
         <%= f.button :button, class: "btn btn-success", "ng-click" => "add_resource($event)" %>
     <% end %>
 </div>
