eliminar pestaña workshop tips

--- a/app/views/steps/stage1.html.erb
+++ b/app/views/steps/stage1.html.erb
@@ -17,7 +17,6 @@
             <ul class="nav nav-tabs" role="tablist">
               <li role="presentation" class="active"><a href="#data" aria-controls="data" role="tab" data-toggle="tab">Data Entry</a></li>
               <li role="presentation"><a href="#explication" aria-controls="explication" role="tab" data-toggle="tab">Explication & Examples</a></li>
-              <li role="presentation"><a href="#tips" aria-controls="tips" role="tab" data-toggle="tab">Workshop Tips</a></li>
             </ul>
 
             <!-- Tab panes -->
@@ -45,7 +44,7 @@
                   <h4 class="panel-title"><a data-toggle="collapse" href="#objetive1" aria-expanded="false" aria-controls="collapseExample">Women and children not included as target populations of the National Strategic Plan (epidemy historically concentrated in male drug users)</a></h4>   
                 </div>      
                 <div class="collapse in" id="objetive1">
-                  <button type="button" class="btn btn-info pull-right">Add</button>
+                  <button type="button" class="btn btn-warning pull-right">Add</button>
                   <h4>Which policy solutions would constitute an appropriate response? <i class="fa fa-info-circle" title="What are the main policy solutions that would resolve the problems identified and that UNICEF would like to see adopted? "></i></h4>
                   <table class="table">
                       <tbody>
@@ -119,24 +118,6 @@
                   <li>Increase donor funding on PMTCT</li>
                 </ul>
 
-              </div>
-              <div role="tabpanel" class="tab-pane" id="tips">
-
-                <ul>
-                  <li>
-                    Often when the advocacy planning process kicks off the organization has already defined the real-world problem it wants to focus on and has also carried out a general situation analysis of the real world problem (or even conducted a problem tree). Therefore, the advocacy planning process does not need to start from scratch but should use the information available as a basis for the advocacy planning process. <br>
-                    Therefore, prior to the planning session you should have identified the problem and use it as a key input. You can write it in a big card and place it on a wall. If possible, leave enough space to add several layers of cards below.  Furthermore, you could ask one participant to deliver a short presentation of the main identified causes in the area of analysis as a “refresher” for the rest of the team and then ask participants to identify those causes with a clear policy dimension.
-                  </li>
-                  <li>
-                    “Policy glasses”. Invite participants to wear their “policy glasses” so they focus on the policy related causes and explain clearly the relation/connection to the policy-making environment. <br>
-                    For example, in a low-income country it is identified that a main cause of the rapid spread of a communicable disease is the lack of hand hygiene and a programme response from UNICEF is likely to be the implementation of a behavioural change campaign. If there is not a specific connection to the policymaking environment, it should not be identified as one of the policy-related causes in the analysis.
-                  </li>
-                  <li>
-                    If there are many policy related causes it is usually useful to group them under broader themes such as lack of enforcement of approved procedures, lack of knowledge about rights or lack of data.
-                  </li>
-                  <li>Organizations who have been working on an issue have usually identified (through research, partnerships, etc.) solutions for the policy related problems. Hence the solutions can be easily listed. However, newcomers to the issues may not have been able to develop and/or agree on concrete policy solutions. In this case you should try to be as specific as possible. You can also consult with experts ahead of the planning session or invite them to participate in the process so they can provide you with valuable inputs on adequate solutions. </li>
-                </ul>
-                
               </div>
             </div>
 
