--- a/app/views/resources/aside.html.erb
+++ b/app/views/resources/aside.html.erb
@@ -10,8 +10,8 @@
         <%= f.input :tag_list , input_html: {:"ng-model" => "current_resource.tag_list"} %>
         <%= f.input :public , input_html: {:"ng-model" => "current_resource.public"} %>
         <%= f.button :button, class: "btn btn-success", "ng-click" => "add_resource($event)" %>
+        <button class="btn btn-warning" ng-click="cancel($event)">Cancel</button>
     <% end %>
 </div>
 <div class="modal-footer">
-    <button class="btn btn-success" ng-click="ok($event)">OK</button>
 </div>
