Projects have one real_problem

--- a/app/views/real_problems/show.html.erb
+++ b/app/views/real_problems/show.html.erb
@@ -11,6 +11,11 @@
 </p>
 
 <p>
+  <strong>Project:</strong>
+  <%= link_to @real_problem.project.title, @real_problem.project %>
+</p>
+
+<p>
   <strong>Policy Problems:</strong>
 <table>
   <thead>
