--- a/app/views/real_problems/_form.html.erb
+++ b/app/views/real_problems/_form.html.erb
@@ -4,6 +4,7 @@
   <div class="form-inputs">
     <%= f.input :title %>
     <%= f.input :description %>
+    <%= f.association :project%>
   </div>
 
   <div class="form-actions">
